# symbols

./: .clang-format  .editorconfig  .gitignore  .symbols-ignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
emacs/: deploy.local.example  deploy.py  symbols-server.el
src/: args.cpp  args.hpp  ignore.cpp  ignore.hpp  indexer.cpp  indexer.hpp  json.cpp  json.hpp  main.cpp  parser.cpp  parser.hpp  protocol.cpp  protocol.hpp  scanner.cpp  scanner.hpp  server.cpp  server.hpp
tests/: args.test.cpp  ignore.test.cpp  indexer.test.cpp  json.test.cpp  main_test.cpp  parser.test.cpp  protocol.test.cpp  scanner.test.cpp  server.test.cpp  test_helpers.hpp
